AUTOMAKE_OPTIONS = foreign
noinst_LTLIBRARIES  = libkemledacrypt.la
noinst_LTLIBRARIES += libkemledacrypt_kem_lt_12.la libkemledacrypt_kem_lt_32.la libkemledacrypt_kem_lt_52.la 

libkemledacrypt_la_LIBADD  = libkemledacrypt_kem_lt_12.la libkemledacrypt_kem_lt_32.la libkemledacrypt_kem_lt_52.la 
libkemledacrypt_la_SOURCES = 

libkemledacrypt_kem_lt_12_la_SOURCES = kem_ledacrypt_kem_lt_12.c pqclean_ledakemlt12_leaktime/bf_decoding.c pqclean_ledakemlt12_leaktime/dfr_test.c pqclean_ledakemlt12_leaktime/gf2x_arith_mod_xPplusOne.c pqclean_ledakemlt12_leaktime/gf2x_arith.c pqclean_ledakemlt12_leaktime/H_Q_matrices_generation.c pqclean_ledakemlt12_leaktime/kem.c pqclean_ledakemlt12_leaktime/niederreiter.c pqclean_ledakemlt12_leaktime/rng.c 
libkemledacrypt_kem_lt_12_la_CFLAGS  = $(AM_CFLAGS) -I../../common/pqclean_shims

libkemledacrypt_kem_lt_32_la_SOURCES = kem_ledacrypt_kem_lt_32.c pqclean_ledakemlt32_leaktime/bf_decoding.c pqclean_ledakemlt32_leaktime/dfr_test.c pqclean_ledakemlt32_leaktime/gf2x_arith_mod_xPplusOne.c pqclean_ledakemlt32_leaktime/gf2x_arith.c pqclean_ledakemlt32_leaktime/H_Q_matrices_generation.c pqclean_ledakemlt32_leaktime/kem.c pqclean_ledakemlt32_leaktime/niederreiter.c pqclean_ledakemlt32_leaktime/rng.c 
libkemledacrypt_kem_lt_32_la_CFLAGS  = $(AM_CFLAGS) -I../../common/pqclean_shims

libkemledacrypt_kem_lt_52_la_SOURCES = kem_ledacrypt_kem_lt_52.c pqclean_ledakemlt52_leaktime/bf_decoding.c pqclean_ledakemlt52_leaktime/dfr_test.c pqclean_ledakemlt52_leaktime/gf2x_arith_mod_xPplusOne.c pqclean_ledakemlt52_leaktime/gf2x_arith.c pqclean_ledakemlt52_leaktime/H_Q_matrices_generation.c pqclean_ledakemlt52_leaktime/kem.c pqclean_ledakemlt52_leaktime/niederreiter.c pqclean_ledakemlt52_leaktime/rng.c 
libkemledacrypt_kem_lt_52_la_CFLAGS  = $(AM_CFLAGS) -I../../common/pqclean_shims

